--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5,
   .ul-check.success li:before {
     color: #8bc34a; }
   .ul-check.primary li:before {
-    color: #116530; }
+    color: #0038b8; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
