--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -71,7 +71,7 @@ $colors: map-merge(
   $colors
   );
 
-$primary:       #116530 !default;
+$primary:       #005EB8 !default;
 $secondary:     #ECB365 !default;
 $success:       $green !default;
 $info:          $cyan !default;
